# Clstl_Smltr

./: .gitignore  .gitmodules  .vercelignore  404.html  ANALYTICS.md  AUTH_FLOW_REVIEW.md  Betelgeuse_Research_Datasheet.docx  DEPLOYMENT.md  DESIGN_TOKENS.md  Dockerfile  EARTH_LOD_NASA_PRECIP_PLAN.md  EARTH_ML_FIRST_PRINCIPLES.md  ET&CLAUDE_SUN_MHD_NASA_X9.0_Flare_2024-10-03  MAGIC_LINK_SETUP.md  MHD_DENSITY_PHASE0_RUNBOOK.md  MHD_DENSITY_PRODUCT_PLAN.md  OAUTH_SETUP.md  OPERATIONS_STATUS.md  QUICK_START.md  README.md  SECURITY.md  SMOKE_TEST_EDUCATOR.md  STUDIO_GUIDE.md  TIER_EXPANSION_SPRINT.md  Ton618_backlog  VERCEL_SETUP.md  WEATHER_FORECAST_PLAN.md  WEB_DEPLOYMENT.md  WR102_Simulation_Proposal.docx  account.html  achernar.html  add_cv_strip.py  admin.html  api-policy.html  auth-callback.html  betelgeuse.html  black-hole-fluid.html  build-sgp4.sh  build-sstar.sh  build-sunfield.sh  (+111 more)
.claude/hooks/: session-start.sh
.github/workflows/: build-wasm.yml  dashboard-probe.yml  deploy.yml  dsmc-e2e.yml  jekyll-gh-pages.yml  weather-refresh.yml
.well-known/: security.txt
api/: CACHING.md  horizons.js  storms.js
api/_lib/: TEMPLATE.js  heartbeat.js  middleware.js  prewarm.js  responses.js  stripe.js
api/alerts/: email.js
api/atmosphere/: _seed.js  profile.js  snapshot.js
api/auth/: log-failure.js
api/billing/: status.js
api/celestrak/: aristotle.js  tle.js
api/checkout/: create-session.js
api/class/: invite.js  roster.js
api/contact/: enterprise.js  feedback.js
api/cron/: daily-forecast-digest.js  onboarding-nudge.js  pipeline-watchdog.js  prewarm-cold.js  prewarm-hot.js  prewarm-medium.js  refresh-saved-locations.js  refresh-solar-wind.js  refresh-weather-grid.js  warm-forecasts.js
api/donki/: cme.js  flares.js  gst.js  notifications.js  sep.js
api/forecast/: weather.js
api/hek/: coronal-holes.js
api/invites/: send.js
api/launches/: upcoming.js
api/lightning/: strikes.js
api/mars/: weather.js
api/nasa/: gibs-snapshot.js
api/ndbc/: buoys.js
api/noaa/: alerts.js  aurora.js  dst.js  electrons.js  flares.js  forecast-3day.js  kp-1m.js  protons.js  radio-flux.js  regions.js  xray.js
api/nomads/: gfs.js
api/nws/: convective.js
api/solar-wind/: ingest.js  latest.js  wind-speed.js
api/spacetrack/: metadata.js
api/stripe/: checkout.js  portal.js  webhook.js
api/telemetry/: log.js
api/weather/: forecast.js  grid.js  metno.js  nws.js  polar-vortex.js  refresh.js  ssw-verify.js  surface-outlook.js  teleconnections.js
api/webhook/: stripe.js
api/welcome/: send.js
data/: ssw-events.json
data/history/: index.json
dsmc/: Dockerfile  docker-compose.ci.yml
dsmc/benchmark/: starlink_2022_validate.py
dsmc/config/: schema.sql
dsmc/pipeline/: _jacchia_parity_check.mjs  atmosphere.py  belay.py  compare_events.py  db.py  drag_forecast.py  fetch_grace_density.py  fetch_historical_indices.py  fetch_indices_offline.py  fit_pseudo_ap.py  ingest_indices.py  jacchia_residuals.py  jacchia_timeseries.py  profile.py  requirements.txt  serve_drag.py  (+2 more)
js/: account.js  activation.js  admin-analytics.js  admin-invites.js  advection-gain-tracker.js  alert-engine.js  alert-icons.js  analytics.js  artemis-data.js  atmosphere-climatology.js  atmosphere-forecast.js  attribution-badge.js  aurora-forecast.js  aurora-history.js  auth-funnel.js  auth.js  card-previews.js  class-roster.js  cloud-imagery.js  cme-propagation.js  collision-avoidance.js  config.js  conjunction-alert.js  constellation-catalog.js  cookie-consent.js  corona-volumetric-mount.js  corona-volumetric.js  daily-summary.js  data-feeds.js  debris-catalog.js  debris-feed.js  debris-threat-cache.js  debris-threat-worker.js  debug-overlay.js  design-tokens.css  draggable-panel.js  earth-ecs-bridge.js  earth-feeds.js  earth-forecast.js  earth-hires.js  (+160 more)
pi/: docker-compose.yml
rust/: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  WASM_STATUS.md  build.rs  build_wasm.bat  build_wasm.sh  vercel.json
rust-earth-analytics/: Cargo.toml  build.sh
rust-earth-analytics/src/: atmosphere.rs  ecs.rs  lib.rs  magnetosphere.rs  spatial.rs
rust-forecast/: Cargo.toml
rust-sgp4/: Cargo.toml  build.sh
rust-sstar/: Cargo.toml
rust-sstar/src/: lib.rs
rust-sunfield/: Cargo.toml
rust-sunfield/src/: field.rs  lib.rs  pil.rs  seed.rs  trace.rs  vec3.rs
rust/.cargo/: config.toml
rust/assets/shaders/: corona_glow.wgsl  flare_flash.wgsl  fluid_advect.wgsl  solar_surface.wgsl
rust/src/: camera.rs  main.rs  t_tauri_main.rs
rust/src/prediction/: feature_extract.rs  flare_ml.rs  mod.rs  solar_wind.rs
rust/src/rendering/: hud.rs  mod.rs  solar_material.rs  star.rs
rust/src/simulation/: fluid.rs  flux_rope.rs  magnetic.rs  mod.rs  particles.rs  prominence.rs
rust/src/t_tauri/: disk.rs  mod.rs  particles.rs  star.rs
rust/www/: index.html  placeholder.html  star_renderer.d.ts  star_renderer.js  star_renderer_bg.wasm.d.ts
scripts/: build-atmosphere-seed.mjs  build_hindcast_fixture.py  jsonld_inject.py  perf_hints.py  probe-dashboard.mjs  seo_audit.py  seo_fix_pass.py  seo_inject.py
swmf/: Dockerfile  docker-compose.swmf.yml
tests/: auth-flows.spec.js  auth-funnel.spec.js  auth-tier-redirect.spec.js  dashboard-console-probe.spec.js  earth-smoke.spec.js  space-weather-ua-smoke.spec.js  upper-atmosphere-e2e.spec.js  upper-atmosphere-smoke.spec.js
(+124 files in other folders)
