[package]
name = "sstar_wasm"
version = "0.1.0"
edition = "2021"
description = "S-star orbital propagator for Sgr A* — Keplerian + 1PN corrections, compiled to WebAssembly"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
