[package]
name = "star_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_asset",
    "bevy_gizmos",
    "png",
] }

# Platform-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.17", default-features = false, features = ["x11"] }
rand = "0.8"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
# VideoFrame feature required: .cargo/config.toml sets web_sys_unstable_apis,
# which activates glow's VideoFrame WebGL code paths; without this feature the
# tex_image_2d_with_*_video_frame methods on WebGlRenderingContext are absent.
web-sys = { version = "0.3", features = ["VideoFrame"] }
bevy = { version = "0.17", default-features = false, features = ["webgl2"] }
fastrand = "2.0"

# Optimize for better performance in dev builds
[profile.dev]
opt-level = 1

# Fast compile times in development
[profile.dev.package."*"]
opt-level = 3

# Optimize for WASM release builds
[profile.release]
opt-level = 'z'     # Optimize for size
lto = "thin"        # Enable link-time optimization
codegen-units = 1   # Better optimization, slower compile
